--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -85,37 +85,29 @@
         </div>
       </div>
 
-      <div class='spacer'>
-        <img src="../../../assets/img/allow_down_slv.svg" alt="">
-        <div class="rt" (click)="$event.stopPropagation()">
-          <!-- バス
-          <button class="option" (click)="onClickBus()" [disabled]="!row?.planSpots">
-            <span class="label color-brown" *ngIf="row?.isBus">{{ "UseBus" | translate }}</span>
-            <span class="label color-silver" *ngIf="!row?.isBus">{{ "Nobus" | translate }}</span>
-            <span class="icon" [ngClass]="row?.isBus?'color-brown':'color-silver'">
-              <img src="/assets/img/bus.svg" alt="Bωus">
-            </span>
-          </button> -->
-          <!-- 交通機関 -->
-          <button class="option" (click)="onClickTran(false)" [disabled]="!row?.planSpots">
-            <span class="icon" [ngClass]="!row?.isCar?'color-brown':'color-silver'">
-              <img src="/assets/img/move_JR_h.svg" alt="Bωus">
-            </span>
-          </button>
-          <!-- 車 -->
-          <button class="option" (click)="onClickTran(true)" [disabled]="!row?.planSpots">
-            <span class="icon" [ngClass]="row?.isCar?'color-brown':'color-silver'">
-              <img src="/assets/img/move_walk_h.svg" alt="Bωus">
-            </span>
-          </button>
+      <div class='transport' (click)="$event.stopPropagation()">
+        <div class='lt'>
+          <span class="label">移動手段</span>
+          <div class="switchTran" [ngClass]="{'en':lang==='en'}">
+            <input type="checkbox" id="switch-tran" (click)="onClickTran()" [checked]="row?.isCar" [disabled]="!row">
+            <label for="switch-tran"><span></span></label>
+            <div id="swImg"></div>
+          </div>
+        </div>
+        <div class='rt'>
           <!-- 最短ルート -->
           <button class="option" (click)="onClickAuto()" [disabled]="!row?.planSpots">
-            <span class="label" [ngClass]="row?.isAuto?'color-brown':'color-silver'">{{ "Auto" | translate }}</span>
             <span class="icon" [ngClass]="row?.isAuto?'color-brown':'color-silver'">
               <img src="/assets/img/keiro.svg" alt="Auto">
             </span>
+            <span class="label" [ngClass]="row?.isAuto?'color-brown':'color-silver'">{{ "Auto" | translate }}</span>
           </button>
         </div>
+
+      </div>
+
+      <div class='spacer'>
+        <img src="../../../assets/img/allow_down_slv.svg" alt="">
       </div>
 
       <!-- スポットを表示 -->
@@ -158,9 +150,8 @@
                       <ng-container *ngIf="item.categoryText">
                         / {{ item.categoryText | langFilter: lang }}
                       </ng-container>
+                      / {{ "SuggestedTime" | translate }}{{ item.stayTime }}{{ "Minute" | translate }}
                     </span>
-                    <span class="sugtime">{{ "SuggestedTime" | translate }}
-                      {{ item.stayTime }}{{ "Minute" | translate }}</span>
                   </div>
                 </dt>
                 <dt cdkDragHandle>
@@ -273,7 +264,8 @@
       </div>
     </ng-container>
 
-    <app-transfer-panel *ngIf="row.startPlanSpot && row.startPlanSpot.transfer" [isCar]="row.isCar" [item]="row.startPlanSpot">
+    <app-transfer-panel *ngIf="row.startPlanSpot && row.startPlanSpot.transfer" [isCar]="row.isCar"
+      [item]="row.startPlanSpot">
     </app-transfer-panel>
 
     <div class="box" *ngIf="row.planSpots">
