--- a/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.scss
+++ b/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.scss
@@ -1,7 +1,7 @@
 @import "vars";
 
 ::ng-deep.cdk-global-overlay-wrapper {
-  align-items: center !important;
+  //align-items: center !important;
 
   .cdk-overlay-pane {
     @media screen and (min-width: 1025px) {
