--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -667,6 +667,110 @@ $color-grn01: #81C5B4;
   }
 }
 
+@mixin switchTran {
+  .switchTran {
+    $edit: "公共交通機関";
+    $preview: "自家用車等";
+    $edit_en: "Public";
+    $preview_en: "Mycar";
+    $height: 30px;
+    $radius: 15px;
+    $color:#707070;
+
+    line-height: $height;
+    letter-spacing: 0;
+    text-align: center;
+    font-size: 10px;
+    font-weight: bolder;
+
+    position: relative;
+    width: 159px;
+    background: #fff;
+
+    &.en {
+      input[type="checkbox"] {
+        &:checked+label {
+          span::after {
+            content: $preview_en;
+          }
+        }
+
+        &:checked~#swImg {
+          &::before {
+            content: $edit_en;
+          }
+        }
+      }
+
+      label {
+        span::after {
+          content: $edit_en;
+        }
+      }
+
+      #swImg {
+        &::before {
+          content: $preview_en;
+        }
+      }
+    }
+
+    input[type="checkbox"] {
+      display: none;
+
+      &:checked+label {
+        border-color: $color;
+
+        span::after {
+          content: $edit; //$preview;
+          padding: 0 78px 0 0;
+          color: $color;
+        }
+      }
+
+      &:checked~#swImg {
+        transform: translateX(73px);
+        background: $color;
+
+        &::before {
+          content: $preview; //$edit;
+          color: #fff;
+        }
+      }
+    }
+
+    label {
+      display: block;
+      box-sizing: border-box;
+      height: $height;
+      border: 1px solid $color;
+      border-radius: $radius;
+
+      span::after {
+        content: $preview; //$edit;
+        padding: 0 0 0 84px;
+        color: $color;
+      }
+    }
+
+    #swImg {
+      position: absolute;
+      width: 86px;
+      height: $height;
+      background: $color;
+      top: 0px;
+      left: 0px;
+      border-radius: $radius;
+      transition: .2s;
+
+      &::before {
+        content: $edit; //$preview;
+        color: #fff;
+      }
+    }
+  }
+}
+
 @mixin text-truncate($font-size, $line-height, $line, $bg) {
   position: relative;
   max-height: $font-size * $line-height * $line + px;
