--- a/src/app/parts/myplan-spot-edit-dialog/myplan-spot-edit-dialog.component.scss
+++ b/src/app/parts/myplan-spot-edit-dialog/myplan-spot-edit-dialog.component.scss
@@ -220,7 +220,7 @@
       button.abscancel {
         all: unset;
         position: fixed;
-        width: 100px;
+        width: 24vw;
         top: 29px!important;
         right: 0;
         left: 0;
