--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -43,7 +43,7 @@ header {
 
   //@media screen and (min-width: 415px) and (max-width: 1024px) { 
   //@media screen and (min-width: 415px) {
-    @media screen and (min-width: 429px) {
+  @media screen and (min-width: 429px) {
     .imgsp {
       margin-top: 1vw;
       margin-left: 16px;
@@ -144,12 +144,29 @@ header {
 
   .guide {
     position: absolute;
+    left: 0;
+    right: 0;
     font-size: 13px;
     font-weight: 700;
     color: #000;
-    width: 100%;
+    width: 130px;
     margin: auto;
-    text-align: center;
+    display: inline-flex;
+    justify-content: center;
+    //border: 1px solid #ccc;
+    //border-radius: 15px;
+    border-bottom: 1px solid #ccc;
+    height: 26px;
+    
+    cursor: pointer;
+
+    &::before {
+      content: url("../../../assets/img/icon_beginner.svg");
+      width: 16px;
+      height: 13px;
+      margin-right:3px;
+      margin-top: 1px;
+    }
   }
 
 }
@@ -266,7 +283,7 @@ $menu_line: 2px;
 }
 
 @media screen and (min-width: 1025px) {
-  header{
+  header {
     width: 1024px;
     margin: auto;
     margin-bottom: 10px;
