--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -670,7 +670,7 @@ $color-grn01: #81C5B4;
 @mixin switchTran {
   .switchTran {
     $edit: "公共交通機関";
-    $preview: "自家用車等";
+    $preview: "車移動";
     $edit_en: "Public";
     $preview_en: "Mycar";
     $height: 30px;
