REMOJU-473 プラン作成　車移動検索機能追加

--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -160,7 +160,7 @@
 
     <!-- マップ -->
     <div class='map'>
-      <app-map-panel *ngIf="isMapDisp" [planSpots]="data.spots" [planId]="data.planId" [isDetail]="true" [isCar]="data.isCar">
+      <app-map-panel *ngIf="isMapDisp" [planSpots]="data.spots" [planId]="data.planId" [isDetail]="true" [isCar]="data.isCar" [overviewPolyline]="data.overviewPolyline">
       </app-map-panel>
     </div>
 
