--- a/src/app/parts/map-dialog/map-dialog.component.html
+++ b/src/app/parts/map-dialog/map-dialog.component.html
@@ -5,7 +5,8 @@
   [planSpots]="data.planSpots"
   [startPlanSpot]="data.startPlanSpot"
   [endPlanSpot]="data.endPlanSpot"
-  [isCar]="data.isCar"></app-map-panel>
+  [isCar]="data.isCar"
+  [overviewPolyline]="data.overviewPolyline"></app-map-panel>
 </mat-dialog-content>
 
 <button
