--- a/src/app/pages/mypage-planlist/mypage-planlist.component.scss
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.scss
@@ -8,8 +8,8 @@
 //   src: url(../../../assets/icons/material-icon.woff2) format("woff2");
 // }
 
-#noPlan{
-  p{
+#noPlan {
+  p {
     border: $color-gry07 solid 1px;
     border-radius: 10px;
     padding: 15px;
@@ -698,7 +698,7 @@ span.sortlink {
 
 .box {
   margin-top: 16px;
-  
+
   ::ng-deep .mat-card {
     padding: 0;
 
@@ -794,7 +794,7 @@ span.sortlink {
 
             .mat-list-item-content {
               justify-content: space-between;
-              align-items: end;
+              align-items: center;
 
               .lt {
                 display: flex;
@@ -837,9 +837,40 @@ span.sortlink {
                       font-size: 15px;
                     }
                   }
+
                 }
               }
 
+              .share {
+                display: flex;
+                align-items: center;
+                //flex-direction: column;
+                
+                .container {
+                  select {
+                    all: unset;
+                    font-size: 11px;
+                    font-weight: 700;
+                  }
+
+                  background-color: #eee;
+                  padding: 6px;
+                  border-radius: 6px;
+                  &.all{
+                    background-color: $color-pnk00;
+                    color: #fff;
+                    &::after{
+                      color: #fff;
+                    }
+                  }
+
+                  &::after {
+                    content: "▼";
+                    font-size: 9px;
+                    color: #999;
+                  }
+                }
+              }
             }
           }
 
