REMOJU-473 プラン作成　車移動検索機能追加

--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -256,7 +256,7 @@
               </mat-list-item>
             </mat-list>
             <!-- 移動方法 -->
-            <app-transfer-panel *ngIf="i + 1 < spots.length" [isCar]="data.isCar" [item]="item"></app-transfer-panel>
+            <app-transfer-panel *ngIf="i + 1 < spots.length" [isCar]="data.isCar" [item]="item" [nextItem]="data.spots[i + 1]"></app-transfer-panel>
           </mat-card-content>
         </mat-card>
       </ng-container>
