REMOJU-495 プラン作成　上下の左側にお気に入り機能追加

--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -157,6 +157,11 @@
                     </span>
                   </div>
                 </dt>
+                <dt>
+                  <button mat-button class="add-to-favorite" [ngClass]="{'on':item.isFavorite}"
+                    (click)="onClickFavorite(item)">
+                  </button>
+                </dt>
                 <dt cdkDragHandle>
                   <img src="../../../assets/img/icon_swap.svg" width="16px" />
                 </dt>
