--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -444,7 +444,7 @@
 
               // spot item
               &:nth-child(2) {
-                flex-basis: 76%;
+                flex-basis: 72%;
                 display: flex;
 
                 .lt {
@@ -505,8 +505,38 @@
               }
 
               &:nth-child(3) {
-                flex-basis: 12%;
+                flex-basis: 8%;
+                button.add-to-favorite {
+                  box-shadow: none;
+                  min-width: auto;
+                  padding: 0;
+                  
+                  &::before {
+                    content: "";
+                    display: inline-block;
+                    width: 18px;
+                    height: 18px;
+                    background: url("../../../assets/img/icon_fav_b.svg");
+                    background-repeat: no-repeat;
+                  }
+        
+                  &.on {
+                    // background-color: $color-pnk04;
+                    &::before {
+                      background: url("../../../assets/img/icon_fav_b_on.svg");
+                      background-repeat: no-repeat;
+                    }
+                  }
+        
+                  ::ng-deep.mat-button-ripple {
+                    width: 0;
+                    height: 0;
+                  }
+                }
+              }
 
+              &:nth-child(4) {
+                flex-basis: 8%;
               }
             }
           }
